Added tests for hamburger menu