@@ -6,6 +6,7 @@ import Base.RetryAnalyzer;
 import Pages.*;
 import io.github.bonigarcia.wdm.WebDriverManager;
 import org.openqa.selenium.edge.EdgeDriver;
+import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
 import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
@@ -16,6 +17,7 @@ import java.io.IOException;
 import java.time.Duration;
 
 import static Helpers.URLs.*;
+import static Helpers.Data.*;
 
 public class InventoryPageTest extends BaseTest {
 
@@ -41,8 +43,8 @@ public class InventoryPageTest extends BaseTest {
         loginUser();
         inventoryPage.clickOnSortDropdown();
         inventoryPage.clickOnSortNameAtoZ();
-        Assert.assertEquals(inventoryPage.productsName.get(0).getText(), "Sauce Labs Backpack");
-        Assert.assertEquals(inventoryPage.productsName.get(inventoryPage.productsName.size()-1).getText(), "Test.allTheThings() T-Shirt (Red)");
+        Assert.assertEquals(inventoryPage.productsName.get(0).getText(), listOfItems().getFirst());
+        Assert.assertEquals(inventoryPage.productsName.get(inventoryPage.productsName.size()-1).getText(), listOfItems().getLast());
     }
 
     @Test(priority = 20,retryAnalyzer = RetryAnalyzer.class)
@@ -50,8 +52,8 @@ public class InventoryPageTest extends BaseTest {
         loginUser();
         inventoryPage.clickOnSortDropdown();
         inventoryPage.clickOnSortNameZtoA();
-        Assert.assertEquals(inventoryPage.productsName.get(0).getText(), "Test.allTheThings() T-Shirt (Red)");
-        Assert.assertEquals(inventoryPage.productsName.get(inventoryPage.productsName.size()-1).getText(), "Sauce Labs Backpack");
+        Assert.assertEquals(inventoryPage.productsName.get(0).getText(), listOfItems().getLast());
+        Assert.assertEquals(inventoryPage.productsName.get(inventoryPage.productsName.size()-1).getText(), listOfItems().getFirst());
     }
 
     @Test(priority = 30, retryAnalyzer = RetryAnalyzer.class)
@@ -87,7 +89,7 @@ public class InventoryPageTest extends BaseTest {
     @Test(priority = 60, retryAnalyzer = RetryAnalyzer.class)
     public void userCanOpenAndCloseProduct(){
         loginUser();
-        String productName = "Sauce Labs Bike Light";
+        String productName = listOfItems().get(0);
         inventoryPage.clickOnProduct(productName);
         Assert.assertEquals(itemPage.nameOfProduct.getText(), productName);
         Assert.assertTrue(itemPage.imageCanBeSeen());
@@ -99,7 +101,7 @@ public class InventoryPageTest extends BaseTest {
     @Test(priority = 70, retryAnalyzer = RetryAnalyzer.class)
     public void userCanAddSpecifiedProductToTheCart(){
         loginUser();
-        String productName = "Sauce Labs Bike Light";
+        String productName = listOfItems().get(2);
         inventoryPage.clickOnProduct(productName);
         Assert.assertEquals(itemPage.nameOfProduct.getText(), productName);
         itemPage.clickOnAddButton();
@@ -171,33 +173,26 @@ public class InventoryPageTest extends BaseTest {
         loginUser();
         inventoryPage.clickOnHamburgerButton();
         inventoryPage.clickOnAboutButton();
-        switchTab(1);
         Assert.assertEquals(driver.getCurrentUrl(), aboutURL);
-        Assert.assertEquals(driver.getTitle(), "Sauce Labs: Cross Browser Testing, Selenium Testing & Mobile Testing");
+        Assert.assertEquals(driver.getTitle(), titleAboutPage);
     }
 
     @Test(priority = 140, retryAnalyzer = RetryAnalyzer.class)
-    public void theSortDropdownListWorksCertainUSer(){
-        loginProblem_user();
-        inventoryPage.clickOnSortDropdown();
-        inventoryPage.clickOnSortNameZtoA();
-        Assert.assertEquals(inventoryPage.productsName.get(0).getText(), "Test.allTheThings() T-Shirt (Red)");
-        Assert.assertEquals(inventoryPage.productsName.get(inventoryPage.productsName.size()-1).getText(), "Sauce Labs Backpack");
+    public void hamburgerMenuIsHidden(){
+        loginUser();
+        Assert.assertEquals(inventoryPage.hiddenMenu.getAttribute("aria-hidden"), "true");
+    }
 
-        inventoryPage.clickOnSortDropdown();
-        inventoryPage.clickOnSortNameAtoZ();
-        Assert.assertEquals(inventoryPage.productsName.get(0).getText(), "Sauce Labs Backpack");
-        Assert.assertEquals(inventoryPage.productsName.get(inventoryPage.productsName.size()-1).getText(), "Test.allTheThings() T-Shirt (Red)");
-
-        inventoryPage.clickOnSortDropdown();
-        inventoryPage.clickOnSortPriceHighToLow();
-        Assert.assertEquals(inventoryPage.priceOfProducts.get(0).getText(), "$49.99");
-        Assert.assertEquals(inventoryPage.priceOfProducts.get(inventoryPage.priceOfProducts.size()-1).getText(), "$7.99");
-
-        inventoryPage.clickOnSortDropdown();
-        inventoryPage.clickOnSortPriceLowToHigh();
-        Assert.assertEquals(inventoryPage.priceOfProducts.get(0).getText(), "$7.99");
-        Assert.assertEquals(inventoryPage.priceOfProducts.get(inventoryPage.priceOfProducts.size()-1).getText(), "$49.99");
+    @Test(priority = 150, retryAnalyzer = RetryAnalyzer.class)
+    public void hamburgerMenuHasExpectedItems(){
+        loginUser();
+        Assert.assertEquals(inventoryPage.listOfMenu.size(), 4);
+        inventoryPage.clickOnHamburgerButton();
+        wait.until(ExpectedConditions.visibilityOf(inventoryPage.allItemsButton));
+        Assert.assertEquals(inventoryPage.allItemsButton.getText(), allItems);
+        Assert.assertEquals(inventoryPage.aboutButton.getText(), about);
+        Assert.assertEquals(inventoryPage.logoutButton.getText(), logout);
+        Assert.assertEquals(inventoryPage.resetAppStateButton.getText(), resetAppState);
     }
 
     @AfterMethod
